# Python_FastAPI

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  test.py
.github/: settings.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-merge.yml  deploy-eks.yml  deploy-lambda.yml  network-provision.yml
app/: README.md  config.py  database.py  main.py  models.py  oauth2.py  pyproject.toml  schemas.py
app/routers/: auth.py  post.py  user.py  vote.py
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
lambda/: login_handler.py
terraform/envs/app/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/envs/bootstrap/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/envs/network/: main.tf  terraform.tfvars.example  variables.tf
terraform/modules/api_gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/bootstrap/: main.tf  outputs.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/rds/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
tests/: conftest.py  test_oauth2.py  test_schemas.py  test_utils.py
